[package]
name = "ringest-error"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/bjfssd757/ringest"
description = "Ringest-error is a crate with error definitions for the ringest framework"
license = "MIT"

[features]
regex = ["dep:regex"]

[dependencies]
regex = { version = "1.12.3", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["time"] }
