[package]
name = "ringest-fs"
version = "0.1.0"
edition = "2024"

[features]
regex = ["dep:regex"]
default = ["regex"]

[dependencies]
dashmap = "6.1.0"
regex = { version = "1.12.3", optional = true }
tokio = { version = "1.49.0", features = ["full"] }
ringest-io = { path="../ringest-io" }
ringest-error = { path="../ringest-error" }
bytes = "1.11.1"
lazy_static = "1.5.0"
